Update list, detail, nav, and menu

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -20,4 +20,5 @@
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal"
         android:layout_marginBottom="24dp" />
+    <include layout="@layout/navbar" />
 </LinearLayout>
