--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,5 +7,8 @@
 
     <style name="Theme.Labux_animedxd" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:fontFamily">@font/outfit_regular</item>
+        <item name="colorPrimary">@color/primaryBlue</item>
+        <item name="colorPrimaryVariant">@color/primaryBlue</item>
+        <item name="colorOnPrimary">@color/white</item>
     </style>
 </resources>
