--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,4 +8,8 @@
     <style name="Theme.Labux_animedxd" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:fontFamily">@font/outfit_regular</item>
     </style>
+    <style name="CustomTabTextStyle" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">16sp</item>
+        <item name="textAllCaps">false</item>
+    </style>
 </resources>
