--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
 
         <!-- Subtitle -->
         <TextView
-            android:text="Unleash your inner hero with AnimeDXD"
+            android:text="Unleash inner hero with AnimeDXD"
             android:textSize="20sp"
             android:textColor="#CCCCCC"
             android:gravity="center"
@@ -74,7 +74,7 @@
             android:id="@+id/errorMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/errorRed"
             android:visibility="gone"
             android:textSize="14sp"
             android:layout_marginTop="12dp"
