--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="darkBackground">#0B0D21</color>
     <color name="primaryBlue">#2A4DC1</color>
+    <color name="errorRed">#FF0000</color>
 </resources>
