--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="#000A20"
     tools:context=".HomeActivity">
 
@@ -12,8 +13,7 @@
         android:id="@+id/top_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_alignParentTop="true">
+        android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/toolbar_layout"
@@ -29,7 +29,6 @@
                 android:src="@drawable/logo_animedxd"
                 android:layout_centerInParent="true"
                 android:contentDescription="App Logo" />
-
         </RelativeLayout>
 
         <TextView
@@ -51,21 +50,18 @@
             app:tabIndicatorColor="#569BE2"
             app:tabTextAppearance="@style/CustomTabTextStyle"
             app:tabTextColor="@android:color/white" />
-
     </LinearLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation_menu" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_below="@id/top_container"
-        android:layout_above="@id/bottomNavigationView" />
+        android:layout_weight="1" />
 
-</RelativeLayout>
+    <include
+        android:id="@+id/navbar_include"
+        layout="@layout/navbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
