--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:hint="@string/hint_username"
+            android:textColorHint="#FFFFFF"
             android:textColor="#FFFFFF"
             android:inputType="text" />
 
@@ -64,6 +65,7 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:hint="@string/hint_password"
+            android:textColorHint="#FFFFFF"
             android:textColor="#FFFFFF"
             android:inputType="textPassword" />
 
