--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="end"
-        android:padding="16dp"
+        android:padding="20dp"
         android:layout_marginBottom="8dp">
 
         <!-- Icon Menu -->
@@ -18,6 +18,7 @@
             android:id="@+id/btnMenu"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:paddingTop="16dp"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_menu"
             android:contentDescription="Menu"
